deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-story-lab
  namespace: k8s-lab
  labels:
    app: k8s-story-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-story-lab
  template:
    metadata:
      labels:
        app: k8s-story-lab
    spec:
      containers:
        - name: k8s-story-lab
          image: elroymalayov/k8s-lab:belshy-v2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-story-lab-service
  namespace: k8s-lab
spec:
  selector:
    app: k8s-story-lab
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-story-lab-ingress
  namespace: k8s-lab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s.elroy.site
      secretName: k8s-story-lab-tls
  rules:
    - host: k8s.elroy.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-story-lab-service
                port:
                  name: http
